services/media/jellyseerr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: media
  labels:
    app.kubernetes.io/name: jellyseerr
spec:
  type: ClusterIP
  ports:
    - port: 5055
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: jellyseerr
