services/media/jellyseerr/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Jellyseerr
    gethomepage.dev/description: Peticiones de contenido
    gethomepage.dev/group: Media
    gethomepage.dev/icon: jellyseerr.png
    gethomepage.dev/href: https://jellyseerr.bonchan.org
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - jellyseerr.bonchan.org
  rules:
    - backendRefs:
        - name: jellyseerr
          port: 5055
